--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -5,7 +5,7 @@
       <h3>Create New Listing</h3>
       <form 
         method="POST" 
-        action="/listings/new"   <!-- corrected action -->
+        action="/listings/new"   
         novalidate 
         class="needs-validation" 
         enctype="multipart/form-data"
